# STU-FIIT

./: LICENSE  README.md
Algebra/zadanie/: README.md
Analýza a zložitosť algoritmov/: Bellman–Ford.py  Edit Distance.py  Floyd–Warshall.py  Longest Common Subsequence.py  Longest increasing subsequence.py  NSD.py  knapsack.py  knapsack0-1.py  matrix.py  prefix.py  rsa.py
Aplikačné architektúry softvérových systémov/: infocat.qea
Aplikačné architektúry softvérových systémov/Version 3/: README.md
Aplikačné programovanie v C++/finalne zadanie/: main.cpp  zadanie.md
Aplikačné programovanie v C++/zad1/: main.cpp  zadanie.md
Aplikačné programovanie v C++/zad2/: main.cpp  zadanie.md
Aplikačné programovanie v C++/zad3/: main.cpp  zadanie.md
Aplikačné programovanie v C++/zad4/: bignum.h  bignum_original.h  zadanie.md
Aplikačné programovanie v C++/zad5/: main.cpp  zadanie.md
Aplikačné programovanie v C++/zad6/: main.cpp  zadanie.md
Architektúra informačných systémov/2023/: ME100.qea  Prezentacia.pptx
Architektúra softvéru/: Analyza architektury a vylepsenie zdrojoveho kodu softveru zimbra.pptx  Zamer.docx
Bakalárska práca/: BP_prezentacia.pptx  BP_prezentacia_text.docx  zmeny.txt
Bakalárska práca/diagramy a obrazovky/: add information diagram.drawio  bakalarka.fig  battles memorials soldiers.drawio  login diagram.drawio  users cemeteries warcamps.drawio
Bakalárska práca/digitalizacia prvej svetovej vojny na Slovensku/: README.md
Bakalársky projekt I/materialy/: bakalarka.fig  databaza.drawio  diagram.drawio  login-diagram.drawio
Databázové systémy/RPG-Hra/: LogickyModel.drawio  README.md  Zadanie4_Plevko_Podmanicky.sql  dbdiagramKod.txt
Databázové systémy/Zadanie/: dbs2021v4.yaml
Diplomová práca/: DP_Prezentacia_Text.docx  Peter Plevko Vývoj súčastí webovej aplikácie na sémantickú anotáciu datasetov.pptx  email-oponentovi.txt  email-ziadost.txt  informacie.txt  protokoly.txt
Diplomový projekt I/: adapter-pattern-diagram.drawio  add-dataset-flowchart.drawio  annotate-dataset-flowchart.drawio  cicd.drawio  cloud-diagram.drawio  database-model.drawio  log-in-flowchart.drawio  poznamky.txt
Diplomový projekt II/: DP_Prezentacia.pptx  DP_Prezentacia_Text.docx  LICENSE  diploma-thesis.postman_collection.json  poznamky.txt
Kvantové počítanie/: README.MD  Uloha-10.ipynb  Uloha-7.ipynb  Uloha-8.ipynb  programovacia cast skusky.ipynb
Manažment testovania softvéru/: Aktualny stav systemovych testov.pptx
Návrh a vývoj počítačových hier/: Links.txt
Objektovo-orientované programovanie/: README.md
Operačné systémy/: script.sh  z1.sh  z2.sh  z3.sh  z4.sh  z5.sh  z6.sh  z7.sh
Princípy informačnej bezpečnosti/: Peter_Plevko_Specifikacia_projektu.docx
Princípy počítačovej grafiky a spracovania obrazu/zadanie/ppgso/: CMakeLists.txt  LICENSE
Princípy počítačovej grafiky a spracovania obrazu/zadanie/ppgso/cmake/: FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  add_resources.cmake  bin2c.cmake
Princípy počítačovej grafiky a spracovania obrazu/zadanie/ppgso/dependencies/lib/vc2015/: glew32s.lib
Princípy počítačovej grafiky a spracovania obrazu/zadanie/ppgso/ppgso/: image.cpp  image.h  image_bmp.cpp  image_bmp.h  image_raw.cpp  image_raw.h  mesh.cpp  mesh.h  ppgso.h  shader.cpp  shader.h  texture.cpp  texture.h  tiny_obj_loader.cpp  tiny_obj_loader.h  window.cpp  window.h
Princípy počítačovej grafiky a spracovania obrazu/zadanie/ppgso/shader/: ambient_frag.glsl  color_frag.glsl  color_vert.glsl  convolution_frag.glsl  diffuse_frag.glsl  diffuse_vert.glsl  phong_frag.glsl  phong_vert.glsl  texture_frag.glsl  texture_vert.glsl
Princípy počítačovej grafiky a spracovania obrazu/zadanie/ppgso/src/project/: Bubble.cpp  Bubble.h  FishSpawn.cpp  FishSpawn.h  camera.cpp  camera.h  decorationPiller.cpp  decorationPiller.h  fish.cpp  fish.h  fishTail.cpp  fishTail.h  object.cpp  object.h  plantLight.cpp  plantLight.h  plantStem.cpp  plantStem.h  projectScene.cpp  scene.cpp  scene.h  sharkBottom.cpp  sharkBottom.h  sharkTop.cpp  sharkTop.h  submarine.cpp  submarine.h  submarinePropeler.cpp  submarinePropeler.h  terrain.cpp  terrain.h  volcano.cpp  volcano.h
Riadenie reputácie/: PeterPlevkoSkuskovaPraca.docx
Tímový projekt I/: README.MD
Vnorené systémy/: VNOS.docx  vnos_prezentacia.pptx
Vyhľadávanie informácií/: crawler_pawpeds.py  crawler_rusian.py  final.py  parsing.py  prezentacia.pptx  static_lists.py
Výskum inteligentných softvérových systémov/: poznamky.txt
Webové publikovanie/: XMLparserDjango.txt
(+2113 files in other folders)
